fix: background-color

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
               <div id="colorBadge"></div>
             </div>
             <div id="thirdBox">
-              <p id="headingtwo">Customize Your Umbrella</p>
-              <p id="headingthree">Upload a Logo for an Instant Preview</p>
-              <p id="headingthree">Png and Jpg files only. Max file size 5MB</p>
+              <p id="headingtwo">Customize your umbrella</p>
+              <p id="headingthree">Upload a logo for an instant preview</p>
+              <p id="headingthree">.png and .jpg files only. Max file size 5MB.</p>
               <div id="imageUpload">
                 <svg
                   id="imageSvg"
