--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             </div>
             <div id="thirdBox">
               <p id="headingtwo">Customize your umbrella</p>
-              <p id="headingthree">Upload a logo for an instant preview</p>
-              <p id="headingthree">.png and .jpg files only. Max file size 5MB.</p>
+              <p id="headingthree">Upload a logo for an instant preview.</p>
+              <p id="headingfour">.png and .jpg files only. Max file size 5MB.</p>
               <div id="imageUpload">
                 <svg
                   id="imageSvg"
